# bootstrap_rust_aws_lambdas

./: Cargo.toml  README.md
src/: lib.rs  main.rs  traits.rs
