[package]
name = "bootstrap_aws_lambdas"
version = "0.0.1"
edition = "2021"
authors = ["Ivan Videnovic"]
description = "Bootstrap AWS Lambda Binaries with Rust"
keywords = ["aws", "cdk", "lambda", "function", "binary", "bootstrap", "rust"]
repository = "https://github.com/vvivan/bootstrap_rust_aws_lambdas"
license = "MIT"

[dependencies]
